<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestApp</string>
    <string name="current_location">Current location</string>
    <string name="temperature_scale">F</string>
    <string name="summary">Summary</string>
    <string name="wind">Wind:</string>
    <string name="humidity">Humidity:</string>
    <string name="pressure">Pressure:</string>
    <string name="visibility">Visibility:</string>
    <string name="cloud_cover">Cloud Cover:</string>
    <string name="wind_bearing">Wind Bearing:</string>
    <string name="not_data">Data is not available</string>
    <string name="loading">Loading...</string>
    <string name="error">Error</string>
    <string name="forecast_tab">Forecast</string>
    <string name="web_tab">Web</string>
    <string name="web_back_button">Back</string>
    <string name="web_forward_button">Forward</string>
    <string name="web_reload_button">Reload</string>
    <string name="map_ok_button">Ok</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_forecast_details">ForecastDetailsActivity</string>

</resources>
